package protobuf;
import "DataType.proto";

message VertexDeclaration
{
	message VertexAttrib
	{
		required DataType type = 1;
		required uint32 attrib_id = 2;
	}
	repeated VertexAttrib attributes = 1;
}
